allow editing of URL and site on settings of files_sharding plus add internal_url as fields
display prices for sites on prefs

add description to editable attributes on admin page

assign new users to closest server

on changing home server: copy over files_accounting and user_group_admin

fixes

--- a/css/personalsettings.css
+++ b/css/personalsettings.css
@@ -9,3 +9,13 @@
 .add_data_folder.btn, .data_folder.btn{
 	padding: 7px 12px 4px 12px;
 }
+
+#sharding-info {
+	float: right;
+	margin-right: 8px;
+	margin-top: 24px;
+}
+
+.home_site {
+	margin-top: 12px;
+}
